--- a/ddap-v2-process/src/main/resources/static/resources/css/platform.css
+++ b/ddap-v2-process/src/main/resources/static/resources/css/platform.css
@@ -79,19 +79,19 @@ header h1 {
 table+div.bottom {
 	margin-top:10px;
 }
-#detail fieldset>div {
+fieldset>div {
 	padding-bottom:15px;
 	margin-top:10px;
 }
-#detail fieldset>div>div {
+fieldset>div>div {
 	margin-top:10px;
 }
-#detail label {
+fieldset label {
 	text-align: right;
 	margin-bottom:0;
 	margin-top: 7px;
 	float:left;
-	min-width:45px;
+	min-width:85px;
 }
 
 .label5{
@@ -105,10 +105,6 @@ table+div.bottom {
 }
 .attr-pannel {
 	border: solid 1px #ccc;
-}
-
-#detail label {
-	min-width:85px;
 }
 .attrTable{
 	width:90%;
